--- a/aplikasi a/index.html
+++ b/aplikasi a/index.html
@@ -22,7 +22,7 @@
             <button onclick="appendToDisplay('8')">8</button>
             <button onclick="appendToDisplay('9')">9</button>
             <button onclick="appendToDisplay('/')">/</button>
-            <button onclick="appendToDisplay('')"></button>
+            <button onclick="appendToDisplay('*')">*</button>
             <button onclick="clearDisplay()">C</button>
             <button onclick="deleteLast()">Del</button>
             <button onclick="appendToDisplay('0')">0</button>
